# flowprep

./: .gitignore  Cargo.toml  README.md  demo.sh
.github/workflows/: ci.yml  publish-crate.yml  release.yml
examples/: cic2017_sample.parquet  ocsf_sample.ndjson  sample.nfcapd  sample.pcap
schemas/netflow/v1/: schema.json
src/: canonicalize.rs  main.rs  nfcapd.rs  ocsf.rs  pcap.rs  schema.rs  writer.rs
src/nfdump/: block.rs  compress.rs  decompress.rs  error.rs  exporter.rs  mod.rs  nffilev1.rs  nffilev2.rs  nfx.rs  nfx_v3.rs  record.rs
tests/: bench_pcap.py  test_e2e.py
tests/fixtures/: sample_bz2.nfcapd  sample_lz4.nfcapd  sample_lzo.nfcapd
